--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.21.2
-scikit-learn>=0.20
-tensorflow>=2.0
-matplotlib==3.3.1
-scipy==1.1.0
-joblib==1.0.1
+numpy==1.21.0
+scikit-learn>=0.24.2
+tensorflow==2.5
+matplotlib==3.3.2
+scipy==1.5.2
+joblib==0.17.0
